--- a/sites/all/themes/archtlas-theme/sass/tabs.scss
+++ b/sites/all/themes/archtlas-theme/sass/tabs.scss
@@ -65,10 +65,10 @@ ul.primary {
   a:visited {
     @include border-top-radius(4px);
     @include transition(background-color 0.3s);
-    color: #333;
-    background-color: #dedede;
+    color: $links-color;
+    //background-color: #dedede;
     letter-spacing: 1px;
-    padding: 0 1em;
+    padding: 0.4em 1em;
     text-align: center;
   }
   a:hover,
@@ -78,9 +78,10 @@ ul.primary {
   }
   a.active {
     background-color: transparent;
-    @include filter-gradient(rgba(#e9e9e9, 1), rgba(#e9e9e9, 0));
-    @include background-image(linear-gradient(rgba(#e9e9e9, 1), rgba(#e9e9e9, 0)));
+    //@include filter-gradient(rgba(#e9e9e9, 1), rgba(#e9e9e9, 0));
+    //@include background-image(linear-gradient(rgba(#e9e9e9, 1), rgba(#e9e9e9, 0)));
     border-color: #fff;
+    color: $body-color;
   }
 }
 
